@@ -278,6 +278,16 @@ arangodb::Result RocksDBTransactionState::internalCommit() {
   
   Result result;
   if (_rocksTransaction->GetNumKeys() > 0) {
+#ifdef _WIN32
+    // set wait for sync flag if required
+    // we do this only for Windows here, because all other platforms use the
+    // RocksDB SyncThread to do the syncing
+    if (waitForSync()) {
+      _rocksWriteOptions.sync = true;
+      _rocksTransaction->SetWriteOptions(_rocksWriteOptions);
+    }
+#endif
+
     ++_numCommits;
     result = rocksutils::convertStatus(_rocksTransaction->Commit());
     rocksdb::SequenceNumber latestSeq = rocksutils::globalRocksDB()->GetLatestSequenceNumber();
@@ -304,7 +314,8 @@ arangodb::Result RocksDBTransactionState::internalCommit() {
         collection->commitCounts();
       }
     
-      // wait for sync if required
+#ifndef _WIN32
+      // wait for sync if required, for all other platforms but Windows
       if (waitForSync()) {
         RocksDBEngine* engine = static_cast<RocksDBEngine*>(EngineSelectorFeature::ENGINE);
         TRI_ASSERT(engine != nullptr);
@@ -317,6 +328,7 @@ arangodb::Result RocksDBTransactionState::internalCommit() {
           result = RocksDBSyncThread::sync(engine->db()->GetBaseDB());
         }
       }
+#endif
     }
   } else {
     for (auto& trxCollection : _collections) {
